# formation_cipelia

./: README.md
bpce/: qcm_llm_final.html  requirements.txt  tp_1_one_shot_few_shots_mistral_api.ipynb  tp_2_rag_using_langchain_mistral_api.ipynb  tp_4_agent_ia_mistral_api_colab.ipynb
bpce/Steam_data/: games.csv
bpce/tp_3_finetuning/: bank_customer_support_train.jsonl  bank_customer_support_val.jsonl  tp_3_fine_tunnig_lora.ipynb
bpce/tp_5_mcp/paris/: pyproject.toml
formation_cipelia/: .gitignore  api.txt
formation_cipelia/mcp-formation/: .env.example  .gitignore  CREATION_COMPLETE.txt  GUIDE.txt  README.md  launch_mcp.py  requirements.txt  run_mcp.bat  setup_claude_config.py
formation_cipelia/mcp-formation/prompts/: README.md  assistant_data.md  expert_math.md  formation_llm.md
formation_cipelia/mcp-formation/resources/: data.json  example.txt
formation_cipelia/mcp-formation/src/: __init__.py  main.py
formation_cipelia/paris/: README.md  launch_mcp.py  paris.py  pyproject.toml  run_mcp.bat
formation_cipelia/paris/prompts/: guide_touriste.md  paris_expert.md
formation_cipelia/paris/resources/: arrondissements.json  monuments.txt  paris_guide.txt
formation_cipelia/paris/src/: __init__.py  main.py
formation_cipelia/paris/src/paris_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
formation_cipelia/paris/src/tools/: __init__.py
formation_cipelia/paris/tests/: __init__.py  test_prompts.py  test_resources.py  test_tools.py
formation_cipelia/portfolio/: README.md  index.html  script.js  styles.css
(+3 files in other folders)
