[project]
name = "paris-mcp"
version = "1.0.0"
description = "Paris MCP Server - Formation complète avec Tools, Resources et Prompts"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.24.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21.0"]

[project.urls]
Homepage = "https://github.com/your-repo/paris-mcp"
Documentation = "https://github.com/your-repo/paris-mcp"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"